# gotemir

./: .editorconfig  .golangci.yaml  .gotemir.yaml  .yamllint.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  Taskfile.yml  cspell.json  cspell_custom_words.txt  go.mod  go.sum  pyproject.toml
.github/workflows/: pr-check.yaml  release.yaml
src/: logic.go
src/cmd/: gotemir.go  main.go
src/logic/: cmprd_structures.go  compare.go  compared_structures.go  config.go  directory.go  excluded_tests.go  file_name_variants.go  filter_out_from_config.go  filtered_by_config_files.go  fk_compared_structures.go  fk_directory.go  fk_path.go  os_directory.go  path.go  source_file_name_variants.go  test_file_name_variants.go  warn_on_unused_config.go  without_tests.go
tests/: logic_test.go
tests/it/: test.py
tests/it/logic/: os_directory_test.go
tests/unit/logic/: cmprd_structures_test.go  compare_test.go  excluded_tests_test.go  file_name_variants_test.go  filter_out_from_config_test.go  filtered_by_config_files_test.go  fk_path_test.go  os_directory_test.go  source_file_name_variants_test.go  test_file_name_variants_test.go  without_tests_test.go
