[project]
name = "gotemir"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
  "isort==5.13.2",
  "mypy==1.13.0",
  "pytest==8.3.4",
  "ruff==0.8.3",
]

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
  "D401",
  "S603",
  "S607",
  "FLY002",
  "UP030",
  "G001",
  "FIX002",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",    # use of `assert` detected
  "PLR2004", # Magic value
  "PLR0913", # Too many arguments to function call
  "INP001",  # Add an `__init__.py`. Tests is closed to import
]
