# SPDX-FileCopyrightText: Copyright (c) 2024-2026 Almaz Ilaletdinov <a.ilaletdinov@yandex.ru>
# SPDX-License-Identifier: MIT

[project]
name = "gotemir"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
  "mypy==1.19.1",
  "pytest==9.0.2",
  "ruff==0.15.1",
  "pytest-randomly==4.0.1",
]

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
  "D401",
  "D203",
  "D213",
  "S603",
  "S607",
  "FLY002",
  "UP030",
  "G001",
  "FIX002",
  "TD",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",    # use of `assert` detected
  "PLR2004", # Magic value
  "PLR0913", # Too many arguments to function call
  "INP001",  # Add an `__init__.py`. Tests is closed to import
]
